--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.SearchActivity"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustNothing"
+        android:exported="false" />
         <activity
             android:name=".activity.MediaActivity"
             android:exported="false" />
