--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".ui.media.MediaActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.search.SearchActivity"
             android:windowSoftInputMode="adjustNothing"
         android:exported="false" />
